<resources>
    <string name="app_name">TheBotanyApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="the_botany_app">The Botany App</string>
    <string name="register">Register</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me ?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="user_name">User Name</string>
    <string name="log_out">Log Out</string>
    <string name="search">Search</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_favourites">Favourites</string>
    <string name="to_list">To List</string>
    <string name="welcome_to_the_world_of_botany">Welcome To The World of Botany</string>
    <string name="placeholder">Placeholder</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="send_email">Send Email</string>
    <string name="profile">Profile</string>
    <string name="add_to_favourites">Add to Favourites</string>
</resources>